<resources>
    <string name="app_name">InventoryApp</string>

    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all">Delete All</string>

    <string name="empty_view_text">No products</string>

    <string name="editor_product_name">Product Name</string>
    <string name="editor_product_supplier">Product Supplier</string>
    <string name="editor_product_supplier_email">Product Supplier Email</string>
    <string name="editor_product_quantity">Quantity</string>
    <string name="editor_product_price">Price</string>

    <string name="editor_activity_title_new_product">Add new product</string>
    <string name="editor_activity_title_edit_product">Edit product</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_update_product_failed">Error with updating product</string>
    <string name="editor_update_product_successful">Product updated</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="action_save">Save</string>
    <string name="action_order">Order</string>
    <string name="action_delete">Delete</string>

    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_pieces">pcs</string>

    <string name="error_msg_product_name_empty">Please enter the product name</string>
    <string name="error_msg_product_quantity_empty">Please enter the product quantity</string>
    <string name="error_msg_product_price_empty">Please enter the product price</string>
    <string name="error_msg_product_supplier_empty">Please enter the product supplier</string>
    <string name="error_msg_product_supplier_email_empty">Please enter the product supplier email</string>

    <string name="button_sale">Sale</string>
    <string name="no_available_products">No available products</string>

    <string name="email_subject">Product supply</string>
</resources>
